Finalizando Api
