# NodeJs/Criando a API/src/modules/cars/entity/Specification.ts
@@ -1,11 +1,21 @@
 // @ts-nocheck
 import { v4 as uuidV4 } from 'uuid';
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 
+@Entity("specification")
 export class Specification {
+
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name: string;
+
+    @Column()
     description: string;
-    createdAt: Date;
+
+    @CreateDateColumn({ name: "created_at" })
+    createdAt?: Date;
 
     constructor() {
 
